# example_cmake_google_test

./: CMakeLists.txt  LICENSE  README.md  TODO
lib/: CMakeLists.txt  fact.c
lib/src/: CMakeLists.txt
libs/: CMakeLists.txt
libs/fact/: CMakeLists.txt
libs/fact/inc/: fact.h  factConfig.h.in
main/: main.c
tests/: factGoogleBenchmark.cpp  factGoogleTests.cpp
